--- a/cpp_09/ex02/makefile
+++ b/cpp_09/ex02/makefile
@@ -1,34 +1,25 @@
-# Compiler and flags
-CXX = g++
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98
+CXX=c++
+SRC = PmergeMe.cpp main.cpp 
+DFS = PmergeMe.hpp
 
-# Object files
-OBJ = main.o
+OSRC=$(SRC:.cpp=.o)
+NAME= PmergeMe
+CFLAGS = -Wall -Wextra -Werror -std=c++98 
 
-# Executable name
-TARGET = PmergeMe
+all: $(NAME)
 
-# Default target: Build the program
-all: $(TARGET)
+$(NAME):$(OSRC) 
+	@$(CXX) $(CFLAGS) $(OSRC) -o $@
 
-# Link the object files to create the executable
-$(TARGET): $(OBJ)
-	$(CXX) $(OBJ) -o $(TARGET)
+%.o : %.cpp $(DFS)
+	@$(CXX) $(CFLAGS) -c $<
 
-# Compile the object files
-main.o: main.cpp PmergeMe.hpp
-	$(CXX) $(CXXFLAGS) -c main.cpp -o main.o
-
-# Clean up object files and executable
 clean:
-	rm -f $(OBJ) $(TARGET)
+	@rm -rf $(OSRC)
 
-# Remove only the object files
-fclean:
-	rm -f $(OBJ)
+fclean: clean
+	@rm -rf $(NAME)
 
-# Remove the executable and object files
-re: clean all
+re:fclean all
 
-# Ensure the Makefile works properly in case of no action
 .PHONY: all clean fclean re
